Adding search by name and nen type functionality. Fixing paths in nav bar and Spring connectivity